tool/src/snapshots/krust_sitter_tool__textmate__tests__textmate_with_token_wrapped_extras.snap
---
source: tool/src/textmate.rs
assertion_line: 891
expression: json_str
---
{
  "$schema": "https://raw.githubusercontent.com/martinring/tmlanguage/master/tmlanguage.json",
  "name": "Expression",
  "scopeName": "source.Expression",
  "patterns": [
    {
      "include": "#comments"
    },
    {
      "include": "#numbers"
    }
  ],
  "repository": {
    "comments": {
      "patterns": [
        {
          "match": "//.*$",
          "name": "comment.line.double-slash.Expression"
        },
        {
          "begin": "/\\*",
          "end": "\\*/",
          "name": "comment.block.Expression"
        }
      ]
    },
    "numbers": {
      "patterns": [
        {
          "match": "\\d+",
          "name": "constant.numeric.Expression"
        }
      ]
    }
  }
}
